--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A simple Electron app to remove text formatting.",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . BasicAssTextbox --platform=darwin --arch=arm64,x64 --icon=images/icon.icns"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^28.3.3"
+    "electron": "^28.3.3",
+    "electron-packager": "^17.1.2"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
